--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -143,7 +143,7 @@
 
 /* REDUCE NAVBAR SIZE */
 .navbar {
-  padding: 12px 60px !important;
+  padding: 8px 60px !important;
 }
 
 .logo-text {
